# thermocouple

./: .clang-tidy  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.base  LICENSE  README.md  build.sh
.github/ISSUE_TEMPLATE/: bug_report.md
Thermocouple.xcodeproj/: project.pbxproj
Thermocouple.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Thermocouple.xcodeproj/project.xcworkspace/xcshareddata/: Thermocouple.xccheckout
cmake/: CMakeLists.txt
cmake/Modules/: FindPhidget21.cmake  Findncurses.cmake  gtest.cmake
cmake/PhidgetsMonitor/: CMakeLists.txt
cmake/Thermocouple/: CMakeLists.txt
cmake/ThermocoupleMonitor/: CMakeLists.txt
cmake/gtest/: CMakeLists.txt
cmake/unittest/: CMakeLists.txt
repro/: Makefile  repro  repro.cpp
src/PhidgetsMonitor/: main.cpp
src/ThermocoupleMonitor/: main.cpp
src/private/: AbstractSensor.cpp  AbstractSensor.h  InitOnce.h  MockSensor.cpp  PhidgetsManager.cpp  PhidgetsSensor.cpp  PhidgetsSensor.h  PollingSensor.cpp  PollingSensor.h  SensorBroker.cpp  SensorPoller.cpp  SensorPoller.h  Subscription.cpp
src/public/: AbstractSensor.h  IListener.h  ISensor.h  MockSensor.h  PhidgetsManager.h  SensorBroker.h  SensorPoller.h  Subscription.h
test/: MockSensor.cpp  MockSensor.h  MockSensorTest.cpp  RecordingListener.cpp  RecordingListener.h  SensorBrokerTest.cpp
xcode/: CMakeCache.txt  cmake_install.cmake
xcode/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelease  ReRunCMake.make  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeRelWithDebInfo
xcode/Thermocouple/: cmake_install.cmake
xcode/Thermocouple.build/Debug/ALL_BUILD.build/: Script-8037DE76BAC8460EA6F702ED.sh  dgph
xcode/Thermocouple.build/Debug/ZERO_CHECK.build/: Script-759145E79B194C03BDC97525.sh  dgph
xcode/Thermocouple.build/Release/ZERO_CHECK.build/: dgph
xcode/Thermocouple.xcodeproj/: project.pbxproj
xcode/Thermocouple/Debug/Thermocouple.framework/: Thermocouple
xcode/Thermocouple/Debug/Thermocouple.framework/Versions/A/: Thermocouple
xcode/Thermocouple/Debug/Thermocouple.framework/Versions/A/Headers/: AbstractSensor.h  ISensor.h  SensorBroker.h  SensorPoller.h
xcode/Thermocouple/Debug/Thermocouple.framework/Versions/A/Resources/: Info.plist
xcode/Thermocouple/Debug/Thermocouple.framework/Versions/A/_CodeSignature/: CodeResources
xcode/Thermocouple/Thermocouple.build/Debug/Thermocouple.build/: dgph
xcode/Thermocouple/Thermocouple.build/Debug/Thermocouple.build/Objects-normal/x86_64/: AbstractSensor.d  MockSensor.d  PhidgetsManager.d  PhidgetsSensor.d  PhidgetsSensor.dia  SensorBroker.d  SensorPoller.d  Subscription.d  Thermocouple.LinkFileList
xcode/Thermocouple/Thermocouple.build/Release/Thermocouple.build/: dgph
xcode/ThermocoupleMonitor/: cmake_install.cmake
xcode/ThermocoupleMonitor/Debug/: ThermocoupleMonitor
xcode/ThermocoupleMonitor/Thermocouple.build/Debug/ThermocoupleMonitor.build/: dgph
xcode/ThermocoupleMonitor/Thermocouple.build/Debug/ThermocoupleMonitor.build/Objects-normal/x86_64/: ThermocoupleMonitor.LinkFileList  main.d
xcode/ThermocoupleMonitor/Thermocouple.build/Release/ThermocoupleMonitor.build/: dgph
xcode/gtest/: cmake_install.cmake
xcode/gtest/Thermocouple.build/Debug/gtest.build/: dgph
xcode/gtest/Thermocouple.build/Debug/gtest.build/Objects-normal/x86_64/: gtest.LinkFileList
xcode/unittest/: cmake_install.cmake
xcode/unittest/Thermocouple.build/Debug/unittest.build/: dgph
xcode/unittest/Thermocouple.build/Debug/unittest.build/Objects-normal/x86_64/: unittest.LinkFileList
